--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "vlkyre",
-  "vers": "30",
-  "verold": "🕸️𝐕𝐥𝐤𝐲𝐫𝐞 29🕸️",
+  "vers": "𝐍𝐢𝐠𝐡𝐭𝐥𝐲",
+  "verold": "𝐩𝐁",
   "depecrated": false,
   "directories": {
-    "ᴠʟᴋʏʀᴇ🀄ᴇxʜᴀᴜꜱᴛ": "ᴠʟᴋʏʀᴇ🀄ᴇxʜᴀᴜꜱᴛ",
     "ᴠʟᴋʏʀᴇ🔌cord": "ᴠʟᴋʏʀᴇ🔌cord",
     "ᴠʟᴋʏʀᴇ🥠ᴘᴏʀᴛ": "ᴠʟᴋʏʀᴇ🥠ᴘᴏʀᴛ",
     "ᴠʟᴋʏʀᴇ❣️ʜᴇᴀʀᴛ": "ᴠʟᴋʏʀᴇ❣️ʜᴇᴀʀᴛ",
-    "ᴠʟᴋʏʀᴇ🕸️ʜᴏꜱᴛᴇʀ": "ᴠʟᴋʏʀᴇ🕸️ʜᴏꜱᴛᴇʀ"
+    "ᴠʟᴋʏʀᴇ🕸️ʜᴏꜱᴛᴇʀ": "ᴠʟᴋʏʀᴇ🕸️ʜᴏꜱᴛᴇʀ",
+    "ᴠʟᴋʏʀᴇ🀄ᴇxʜᴀᴜꜱᴛ": "ᴠʟᴋʏʀᴇ🀄ᴇxʜᴀᴜꜱᴛ"
+  },
+  "optionalDependencies": {
+    "fsevents": "*"
   },
   "keywords": [
     "whatsapp",
@@ -19,6 +22,14 @@
     "whatsapp-chat",
     "whatsapp-group",
     "automation",
+    "download",
+    "api",
+    "dl",
+    "downloader",
+    "music",
+    "song",
+    "ffmpeg",
+    "opus",
     "spotify",
     "download",
     "spotifydl",
@@ -27,10 +38,6 @@
     "dl",
     "downloader",
     "spotify-downloader",
-    "discord",
-    "discord-spotify",
-    "discord-music",
-    "discord-player",
     "music",
     "node-spdl",
     "spdl",
@@ -41,9 +48,6 @@
     "filters"
   ],
   "description": "(𝐜)𝐕𝐥𝐤𝐲𝐫𝐞 𝐢𝐬 𝐚 𝐖𝐡𝐚𝐭𝐬𝐚𝐩𝐩 𝐌𝐮𝐥𝐭𝐢𝐏𝐮𝐫𝐩𝐨𝐬𝐞-𝐔𝐬𝐞𝐫𝐛𝐨𝐭 𝐰𝐢𝐭𝐡 𝐌𝐨𝐝𝐞𝐫𝐚𝐭𝐢𝐨𝐧,𝐀𝐮𝐭𝐨𝐦𝐚𝐭𝐢𝐨𝐧 𝐚𝐧𝐝 𝟏𝟎𝟎+ 𝐦𝐨𝐫𝐞 𝐜𝐨𝐦𝐦𝐚𝐧𝐝𝐬!",
-  "scripts": {
-    "vlkyre": "python3 𝕭𝖔𝖔𝖙☢𝕷𝖔𝖆𝖉𝖊𝖗.py"
-  },
   "homepage": "https://github.com/KryKnz/Vlkyre",
   "author": {
     "name": "KryKnzLab"
@@ -75,7 +79,6 @@
     "brainly-scraper": "^1.0.3",
     "browser-id3-writer": "^4.4.0",
     "canvacord": "^5.2.3",
-    "canvas": "^2.9.0",
     "cfonts": "^2.9.0",
     "chalk": "^4.1.1",
     "cheerio": "^1.0.0-rc.10",
@@ -83,8 +86,11 @@
     "co": "^4.6.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "cwk-api": "^1.1.5",
     "date-and-time": "^2.0.1",
     "dhn-api": "^1.1.3",
+    "discord-chatbot": "^2.1.0",
+    "discord-xp": "^1.1.16",
     "discord-ytdl-core": "^5.0.2",
     "dotenv": "^8.2.0",
     "download-file": "^0.1.5",
@@ -132,8 +138,8 @@
     "nhentai-pdf": "^1.0.0",
     "nhentaidownloader": "^1.1.6",
     "node-cooldown": "^0.0.2",
+    "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
-    "node-spotify-youtube-downloader": "^0.9.1",
     "nodejs-file-downloader": "^4.8.1",
     "nodemon": "^2.0.15",
     "npm": "^8.4.1",
@@ -148,6 +154,9 @@
     "pg": "^8.7.1",
     "ping": "^0.4.1",
     "pokedex-promise-v2": "^4.0.0",
+    "pokemon-gif": "^1.0.14",
+    "pokemontcgsdk": "^2.0.0",
+    "pug": "^3.0.2",
     "python-format-js": "^1.3.9",
     "qrcode": "^1.4.4",
     "qrcode-reader": "^1.0.4",
@@ -167,29 +176,51 @@
     "scraper-instagram": "^1.0.17",
     "search-image": "^1.0.3",
     "sequelize": "^6.7.0",
+    "shelljs": "^0.8.5",
     "similarity": "^1.2.1",
-    "simple-git": "^2.47.0",
+    "simple-get": "^4.0.1",
+    "simple-git": "^3.2.6",
+    "simple-swizzle": "^0.2.2",
     "songlyrics": "^2.2.4",
+    "soundcloud-downloader": "^1.0.0",
+    "soundcloud-scraper": "^5.0.2",
     "soyultro": "^4.8.5",
+    "spdl-core": "^2.0.2",
     "spinnies": "^0.5.1",
-    "spotify-to-yt": "^1.1.1",
-    "spotify-url-info": "^2.2.0",
+    "spotify-dl": "^1.0.7",
+    "spotifydl-core": "^0.2.0",
     "sqlite3": "^5.0.2",
+    "table": "^6.8.0",
     "tenorjs": "^1.0.8",
     "text-to-image": "^4.1.1",
     "tinyurl": "^1.1.7",
     "tinyurl-api": "^1.0.1",
     "tod-api": "^1.0.5",
+    "tree-kill": "^1.2.2",
+    "trivia-api": "^1.0.1",
     "typescript": "^4.5.5",
     "unofficial-carbon-now": "^1.0.3",
     "urban-dictionary": "^3.0.2",
+    "wa-sticker-formatter": "^4.0.14",
     "wallpaper": "^6.0.0",
     "weather-js": "^2.0.0",
     "youtube-audio-stream": "^0.3.48",
     "youtube-duration": "^1.0.0",
     "youtube-metadata-from-url": "^1.0.3",
+    "youtube-playlist": "^1.0.4",
+    "youtube-playlist-downloader": "^1.0.2",
     "youtube-sr": "^4.0.1",
+    "yt-dl-playlist": "^2.1.0",
     "yt-search": "^2.10.3",
-    "ytdl-core": "^4.10.1"
+    "ytdl-core": "^4.9.1",
+    "ytfps": "^1.0.5",
+    "ytpl": "^2.2.3"
+  },
+  "devDependencies": {
+    "husky": "^7.0.0",
+    "tailwindcss": "^3.0.23"
+  },
+  "scripts": {
+    "prepare": "husky install"
   }
 }
