--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
     "filters"
   ],
   "description": "(𝐜)𝐕𝐥𝐤𝐲𝐫𝐞 𝐢𝐬 𝐚 𝐖𝐡𝐚𝐭𝐬𝐚𝐩𝐩 𝐌𝐮𝐥𝐭𝐢𝐏𝐮𝐫𝐩𝐨𝐬𝐞-𝐔𝐬𝐞𝐫𝐛𝐨𝐭 𝐰𝐢𝐭𝐡 𝐌𝐨𝐝𝐞𝐫𝐚𝐭𝐢𝐨𝐧,𝐀𝐮𝐭𝐨𝐦𝐚𝐭𝐢𝐨𝐧 𝐚𝐧𝐝 𝟏𝟎𝟎+ 𝐦𝐨𝐫𝐞 𝐜𝐨𝐦𝐦𝐚𝐧𝐝𝐬!",
-  "homepage": "https://github.com/KryKnz/Vlkyre",
+  "homepage": "https://github.com/GasComit/Vlkyre",
   "author": {
-    "name": "KryKnzLab"
+    "name": "GasComIT"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/KryKnz/Vlkyre.git"
+    "url": "git+https://github.com/GasComit/Vlkyre.git"
   },
   "bugs": {
     "url": "https://github.com/Nurutomo/Vlkyre/issues"
